# social_media_gif_downloader

./: .actrc  .gitignore  AGENTS.md  ATTRIBUTIONS.md  BUILDING_EXECUTABLES.md  README.md  __init__.py  config.py  platforms.py  pyproject.toml  release_workflow_design.md  requirements.txt  social-media-gif-downloader.spec  social_media_gif_downloader.py  social_media_gif_downloader.spec  twitter_downloader.py  twitter_gif_downloader.py
.github/workflows/: build-executables.yml  ci.yml  release.yml  version-bump.yml
hooks/: helpers.py
pyinstaller-hooks/: hook-imageio.py
scripts/: version_manager.py
tests/: conftest.py  test_error_handling.py  test_integration.py  test_platform_detection.py  test_url_parsing.py
tests/fixtures/: mock_data.py
