[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twitter-downloader"
version = "1.0.1"
description = "A GUI application to download Twitter/X videos and convert them to GIFs"
authors = [
    {name = "ax2bboud", email = "contact@ax2bboud.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "moviepy>=1.0.0",
    "customtkinter>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ax2bboud/twitter-downloader"
Repository = "https://github.com/ax2bboud/twitter-downloader"
Issues = "https://github.com/ax2bboud/twitter-downloader/issues"

[project.scripts]
twitter-downloader = "twitter_downloader:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-xdist",
]

[tool.setuptools]
license-files = ["LICENSE"]
py-modules = ["twitter_gif_downloader"]